<resources>
    <string name="app_name">Tost</string>
    <string name="app_name_uc">TOST</string>

    <string name="part1_know_how">1–2번 문항의 문제가 출제되는 파트로,\n주어진 영어 문장을 정해진 시간 내로 소리내어\n읽는 것이 문제 풀이 방법입니다.</string>
    <string name="part1_core_point">발음, 강세, 억양</string>
    <string name="part1_how_to_solve">답변 준비 시간 45초 / 답변 시간 45초 이내</string>
    <string name="part1_topic">Read a text aloud</string>
    <string name="part1_directions">In this part of the test,\nyou will read aloud the text on the screen.\n\nYou will have 45 seconds to prepare.\nThen you will have 45 seconds\nto read the text aloud.</string>
    <string name="part1_question_numbers">Q.1~2</string>

    <string name="part2_know_how">3번 문항의 문제가 출제되는 파트로,\n주어진 사진을 정해진 시간 내로\n상세하게 설명하는 것이 문제 풀이 방법입니다.</string>
    <string name="part2_core_point">발음, 강세, 억양, 문법, 어휘, 논리성</string>
    <string name="part2_how_to_solve">답변 준비 시간 45초 / 답변 시간 45초 이내</string>
    <string name="part2_topic">Describe a picture</string>
    <string name="part2_directions">In this part of the test,\nyou will describe the picture on your screen\nin as much detail as you can\n\nYou will have 45 seconds\nto prepare your response.\nThen You will have 45 seconds to speak.\nabout the picture</string>
    <string name="part2_question_numbers">Q.3</string>

    <string name="part3_know_how">4–6번 문항의 문제가 출제되는 파트로,\n특정한 주제의 설문조사나 통화 상황에서\n질문에 대답하는 것이 문제 풀이 방법입니다.</string>
    <string name="part3_core_point">발음, 강세, 억양, 문법, 어휘,\n논리성, 답변의 내용의 적합성과 완전성</string>
    <string name="part3_how_to_solve">답변 준비 시간 : 모든 문항 3초\n답변 시간 : 4, 5번 문항 15초 / 6번 문항 30초</string>
    <string name="part3_topic">Respond to Questions</string>
    <string name="part3_directions">In this part of the test,\nyou will answer three questions.\n\nYou will have three seconds to prepare\nafter you hear each question\n\nYou will have 15 seconds to respond\nto questions 4 and 5, and 30 seconds\nto respond to question 6</string>
    <string name="part3_question_numbers">Q.4~6</string>

    <string name="part4_know_how">7–9번 문항의 문제가 출제되는 파트로,\n주어진 정보(표)를 해석하고, 활용하여\n질문에 대답하는 것이 문제 풀이 방법입니다.\n\n= Part.4 문제는 음성으로만 출제됩니다.</string>
    <string name="part4_core_point">발음, 강세, 억양, 문법, 어휘,\n논리성, 답변의 내용의 적합성과 완전성</string>
    <string name="part4_how_to_solve">답변 준비 시간 : 모든 문항 3초\n답변 시간 : 7, 8번 문항 15초 / 9번 문항 30초</string>
    <string name="part4_topic">Respond to Questions\nusing information provided</string>
    <string name="part4_directions">In this part of the test,\nyou will answer three questions\nbased on the information provided.\n\nYou will have 45 seconds to read\nthe information before the questions begin.\n\nYou will have 3 seconds to prepare\nafter you hear each question.\n\nYou will have 15 seconds\nto respond to question 7 and 8,\nand 30 seconds to respond to question 9.</string>
    <string name="part4_question_numbers">Q.7~9</string>

    <string name="part5_know_how">10번 문항의 문제가 출제되는 파트로,\n녹음된 메세지나 회의 내용을 듣고 질문에 따른\n문제 상황에 대한 해결책을 제시하는 것이\n문제 풀이 방법입니다.\n\n* Part.5 문제는 음성으로만 출제됩니다.</string>
    <string name="part5_core_point">발음, 강세, 억양, 문법, 어휘,\n논리성, 답변의 내용의 적합성과 완전성</string>
    <string name="part5_how_to_solve">답변 준비 시간 45초 / 답변 시간 60초 이내</string>
    <string name="part5_topic">Propose a solution</string>
    <string name="part5_directions">In this part of the test,\nyou will be presented with a problem\nand asked to propose a solution.\n\nYou will have 45 seconds to prepare.\nThen you will have 60 seconds to speak.\n\nIn your response, be sure to\n• Show that you recognize the problem.\n• Propose a way of dealing with the problem.</string>
    <string name="part5_question_numbers">Q.10</string>

    <string name="part6_know_how">11번 문항의 문제가 출제되는 파트로,\n특정한 주제에 대해 자신의 의견과 근거를 더하여\n논리적으로 표현하는 것이 문제 풀이 방법입니다.</string>
    <string name="part6_core_point">발음, 강세, 억양, 문법, 어휘,\n논리성, 답변의 내용의 적합성과 완전성</string>
    <string name="part6_how_to_solve">답변 준비 시간 30초 / 답변 시간 60초 이내</string>
    <string name="part6_topic">Express an opinion</string>
    <string name="part6_directions">In this part of the test, you will give\nyour opinion about a specific topic.\n\nBe sure to say\nas much as you can in the time allowed.\n\nYou will have 30 seconds to prepare.\nThen you will have 60 seconds to speak.</string>
    <string name="part6_question_numbers">Q.11</string>

    <string name="url_terms_and_conditions_of_service">https://www.notion.so/cbeaffd2ab3a4064b93876c00e98c025</string>
    <string name="url_privacy_policy">https://www.notion.so/2cdcb359b69645bbbacc0816810529c1</string>

    <string name="my_note">My Note</string>
    <string name="part_n">Part.%d</string>
    <string name="part_n_no_dot">Part %d</string>
    <string name="part__n">Part. %d</string>
    <string name="problem_solved">풀이 완료</string>
    <string name="problem_remain">남은 문제</string>
    <string name="problem_whole">전체 문제</string>
    <string name="n_slash_n">(%d/%d)</string>
    <string name="achieve">달성했어요!</string>
    <string name="weekly_goal">Weekly Goal</string>
    <string name="n_percent">%d%%</string>
    <string name="problem">문제</string>
    <string name="learn_know_how">학습 노하우</string>
    <string name="core_point">평가 요소</string>
    <string name="how_to_solve">풀이 방법</string>
    <string name="start">시작하기</string>
    <string name="directions">Directions</string>
    <string name="skip">SKIP</string>
    <string name="test_title">모의고사</string>
    <string name="test_title_num">모의고사 %d회</string>
    <string name="tip">TIP</string>
    <string name="n_seconds">%02ds</string>
    <string name="mynote_login_notice">로그인하고 자동으로 목표를 관리해보세요!</string>
    <string name="question_n">Question %d</string>
    <string name="preparation_time">Preparation Time</string>
    <string name="response_time">Response Time</string>
    <string name="my_record">My Record</string>
    <string name="audio_permission_rejected">권한을 거부하시면 서비스를 이용하실 수 없어요 ㅠㅠ</string>
    <string name="cannot_pause_record">해당 안드로이드 버전은 녹음 일시정지가 안돼요! ㅠㅠ</string>
    <string name="continue_next">이어서 시작</string>
    <string name="review">복습하기</string>
    <string name="stop_talking">Stop Talking</string>
    <string name="lets_continue_latest_problem">최근 문제에 이어서 시작해볼까요?</string>
    <string name="next_problem">다음 문제</string>
    <string name="restart">재시작</string>
    <string name="restart_warning">문제 풀이 중 재시작을 누르게 되면\n녹음 중이던 파일을 잃고 다시 녹음이 시작됩니다.</string>
    <string name="stop_talking_auto_next">자동으로 다음 문제로 넘어갑니다.</string>
    <string name="every_day">Every day</string>
    <string name="toeic_speaking">Toeic Speaking</string>
    <string name="training">Training</string>
    <string name="login">로그인</string>
    <string name="signup">회원가입</string>
    <string name="google_login_fail">구글 로그인에 실패했습니다.</string>
    <string name="welcome_nickname">%s님 반가워요</string>
    <string name="lets_set_goal">목표를 설정하고 달성해보세요!</string>
    <string name="my_goal">My Goal</string>
    <string name="yyyy_mm_dd">YYYY. MM. DD </string>
    <string name="to">까지</string>
    <string name="level_n">Level. N </string>
    <string name="level_format">Level. %d </string>
    <string name="to_achieve">달성하기</string>
    <string name="start_with_tost">TOST와 함께 시작하기</string>
    <string name="cannot_select_past">과거는 설정할 수 없어요</string>
    <string name="select_goals">목표를 설정해주세요!</string>
    <string name="n">N</string>
    <string name="complete_settings">설정완료</string>
    <string name="my_weekly_goal">My Weekly Goal</string>
    <string name="my_weekly_goal_description">이번 주 목표 학습량을 설정해 주세요!\n주간 학습량은 매주 월요일 오전 12시에 재설정됩니다.</string>
    <string name="part_6">Part 6</string>
    <string name="part_5">Part 5</string>
    <string name="part_4">Part 4</string>
    <string name="part_3">Part 3</string>
    <string name="part_2">Part 2</string>
    <string name="part_1">Part 1</string>
    <string name="doing_well">잘 하고 있어요!</string>
    <string name="practice">Practice</string>
    <string name="go_to_test">시험보기</string>
    <string name="repeat">복습하기</string>
    <string name="change">수정하기</string>
    <string name="goal_changed">수정이 완료되었습니다!</string>
    <string name="mock_test">모의고사</string>
    <string name="to_be_continued">아직 준비 중이에요~</string>
    <string name="start_with_tost_en">Start with TOST</string>
    <string name="tost">TOST</string>
    <string name="login_and_manage_goals">로그인하고 목표를 관리해보세요!</string>
    <string name="get_login">로그인하기</string>
    <string name="login_required">로그인 후 이용 가능합니다.</string>
    <string name="sub_problem_number">Q %d-%d</string>
    <string name="init_nickname">토스트의 별명을 만들어주세요!</string>
    <string name="input_five_letters">다섯 글자 이하로 입력해주세요</string>
    <string name="when_sign_up">가입 시 </string>
    <string name="privacy_policy_underline"><u>개인정보처리방침</u></string>
    <string name="privacy_policy">개인정보처리방침</string>
    <string name="and">및 </string>
    <string name="terms_and_conditions_of_service_underline"><u>서비스이용약관</u></string>
    <string name="terms_and_conditions_of_service">서비스이용약관</string>
    <string name="eh"> 에</string>
    <string name="agree">동의하게 됩니다.</string>
    <string name="go_setup_goal">목표 설정하러 가기</string>
    <string name="modify_nickname">별명 수정</string>
    <string name="withdrawal_member">회원탈퇴</string>
    <string name="logout">로그아웃</string>
    <string name="logout_wait">잠깐! 로그아웃 상태에서는 목표 관리가\n되지 않아요. 로그인 상태를 유지해주세요!</string>
    <string name="logout_at_moment">잠시 로그아웃 할게요!</string>
    <string name="member_withdrawal_wait">내가 녹음한 파일들과 공부한 내용은\n모두 복구할 수 없어요. 괜찮으신가요?</string>
    <string name="yes_i_am_fine">네, 괜찮아요.</string>
    <string name="modify_my_entire_goal">나의 목표 수정하기</string>
    <string name="nickname">닉네임</string>
    <string name="change_nickname">별명 바꾸기</string>
    <string name="which_nickname_want">어떤 별명으로 바꾸시겠어요?</string>
    <string name="not_blank">빈칸은 안돼요!</string>
</resources>
